feat: complete payment platform with gateway routing and CORS
- Add API Gateway with JWT filter and CORS handling
- Route all frontend requests through gateway (port 8080)
- Add auth-service with login/register/token generation (no JWT filter)
- Update payment-service to trust X-User headers from gateway
- Add custom CorsFilter to gateway for cross-origin requests
- Update frontend to use /api/v1/* paths through gateway
- Remove local profiles, use application.yml only
- Add Flyway migrations for all services